# LightningApp

./: .gitignore  config.yaml  pyproject.toml
api/: request.py  server.py
notebooks/: test_api.ipynb
